# cutie-home-lipstick

./: CMakeLists.txt
data/: lipstick.service
src/: CMakeLists.txt  cutiewindowmodel.cpp  cutiewindowmodel.h  main.cpp
src/qml/: AppLauncher.qml  Compositor.qml  LockScreen.qml  MainScreen.qml  StatusBar.qml
src/qml/applauncher/: LauncherItemDelegate.qml
src/qml/compositor/: Wallpaper.qml  WindowWrapperBase.qml
src/qml/scripts/: desktop.js
src/qml/statusbar/: BatteryIndicator.qml
src/qml/volumecontrol/: VolumeControl.qml
